Fix bleeding color css

--- a/src/main/client/src/components/auth/AuthContainer.scss
+++ b/src/main/client/src/components/auth/AuthContainer.scss
@@ -153,10 +153,10 @@
     margin-left: 5px;
 }
 
-.hidden {
+.PageSwitcher .hidden {
     visibility: hidden;
 }
 
-.show {
+.App__Form .PageSwitcher .show {
     color: red;
 }
